--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
-    "name":    "SNote",
-    "version": "0.1.0",
-    "main":    "main.js"
+    "name": "wordcount",
+    "displayName": "WordCount",
+    "description": "",
+    "version": "0.0.1",
+    "publisher": "lovelock",
+    "engines": {
+        "vscode": "^1.5.0"
+    },
+    "categories": [
+        "Other"
+    ],
+    "activationEvents": [
+        "onLanguage:markdown"
+    ],
+    "main": "./out/src/extension",
+    "scripts": {
+        "vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install"
+    },
+    "devDependencies": {
+        "typescript": "^2.0.3",
+        "vscode": "^1.0.0",
+        "mocha": "^2.3.3",
+        "@types/node": "^6.0.40",
+        "@types/mocha": "^2.2.32"
+    }
 }
